Updated files to fit last HU testing version.
- Config base has upgrades for every class and weapon afaik.

--- a/config_generator_hyperupgrades/hu_upgrades.cfg
+++ b/config_generator_hyperupgrades/hu_upgrades.cfg
@@ -100,8 +100,26 @@
 	{
 		"Cost"	"80"
 		"CostIncrease"	"32"
+		"Increment"	"0.01"
+		"Limit"	"0.1"
+		"Alias"	"add_uber_charge_on_hit"
+		"InitValue"	"0"
+	}
+	"*Get Uber Charge On Hit (C)"
+	{
+		"Cost"	"80"
+		"CostIncrease"	"32"
 		"Increment"	"0.05"
-		"Limit"	"0.5"
+		"Limit"	"0.25"
+		"Alias"	"add_uber_charge_on_hit"
+		"InitValue"	"0"
+	}
+	"*Get Uber Charge On Hit (M)"
+	{
+		"Cost"	"300"
+		"CostIncrease"	"32"
+		"Increment"	"0.25"
+		"Limit"	"0.25"
 		"Alias"	"add_uber_charge_on_hit"
 		"InitValue"	"0"
 	}
@@ -264,10 +282,10 @@
 	}
 	"*Airblast Pushback Scale"
 	{
-		"Cost"	"100"
+		"Cost"	"50"
 		"CostIncrease"	"50"
 		"Increment"	"0.25"
-		"Limit"	"10"
+		"Limit"	"5"
 		"Alias"	"airblast_pushback_scale"
 		"InitValue"	"1"
 	}
@@ -406,7 +424,7 @@
 		"Alias"	"applies_snare_effect"
 		"InitValue"	"0"
 	}
-	"*Apply Look Velocity On Damage"
+	"*More Velocity On Damage"
 	{
 		"Cost"	"100"
 		"CostIncrease"	"50"
@@ -415,7 +433,7 @@
 		"Alias"	"apply_look_velocity_on_damage"
 		"InitValue"	"0"
 	}
-	"*Apply Z Velocity On Damage"
+	"*More Z Velocity On Damage"
 	{
 		"Cost"	"100"
 		"CostIncrease"	"50"
@@ -679,6 +697,15 @@
 		"Limit"	"1"
 		"Alias"	"building_instant_upgrade"
 		"InitValue"	"0"
+	}
+	"*Bullets Per Shot Bonus (S)"
+	{
+		"Cost"	"400"
+		"CostIncrease"	"25"
+		"Increment"	"1"
+		"Limit"	"2"
+		"Alias"	"bullets_per_shot_bonus"
+		"InitValue"	"1"
 	}
 	"*Bullets Per Shot Bonus"
 	{
@@ -1014,18 +1041,18 @@
 		"Increment"	"0.1"
 		"Alias"	"community_description"
 	}
-	"*Construction Speed Bonus"
+	"*Construction Speed Malus"
 	{
 		"Cost"	"10"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
 		"Alias"	"Construction_rate_decreased"
 	}
-	"*Construction Speed Malus"
+	"*Construction Speed Bonus"
 	{
-		"Cost"	"20"
+		"Cost"	"30"
 		"CostIncrease"	"10"
-		"Increment"	"0.34"
+		"Increment"	"0.5"
 		"Limit"	"15"
 		"Alias"	"Construction_rate_increased"
 		"InitValue"	"0"
@@ -1395,6 +1422,13 @@
 		"Alias"	"damage_penalty_on_bodyshot"
 		"InitValue"	"1"
 	}
+	"*Sapper Upgrades on Body"
+	{
+		"Cost"	"10"
+		"CostIncrease"	"5"
+		"Increment"	"0.1"
+		"Alias"	"deactive_date"
+	}
 	"*Deactive Date"
 	{
 		"Cost"	"10"
@@ -1509,7 +1543,7 @@
 	{
 		"Cost"	"40"
 		"CostIncrease"	"16"
-		"Increment"	"0.1"
+		"Increment"	"0.25"
 		"Limit"	"500"
 		"Alias"	"dmg_bonus_vs_buildings"
 		"InitValue"	"1"
@@ -1544,7 +1578,7 @@
 		"Cost"	"25"
 		"CostIncrease"	"25"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.05"
 		"Alias"	"dmg_from_melee_increased"
 		"InitValue"	"1"
 	}
@@ -1553,7 +1587,7 @@
 		"Cost"	"25"
 		"CostIncrease"	"25"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.35"
 		"Alias"	"dmg_from_melee_increased"
 		"InitValue"	"1"
 	}
@@ -1589,10 +1623,10 @@
 	}
 	"*Dmg Penalty Vs Players"
 	{
-		"Cost"	"20"
-		"CostIncrease"	"4"
+		"Cost"	"16"
+		"CostIncrease"	"1"
 		"Increment"	"0.25"
-		"Limit"	"10000"
+		"Limit"	"7500"
 		"Alias"	"dmg_penalty_vs_players"
 		"InitValue"	"1"
 	}
@@ -1601,16 +1635,25 @@
 		"Cost"	"10"
 		"CostIncrease"	"1"
 		"Increment"	"0.25"
-		"Limit"	"10000"
+		"Limit"	"7500"
 		"Alias"	"dmg_penalty_vs_players"
 		"InitValue"	"1"
 	}
 	"*Damage bonus vs player (S)"
 	{
-		"Cost"	"120"
-		"CostIncrease"	"120"
+		"Cost"	"150"
+		"CostIncrease"	"150"
 		"Increment"	"1"
-		"Limit"	"10000"
+		"Limit"	"7500"
+		"Alias"	"dmg_penalty_vs_players"
+		"InitValue"	"1"
+	}
+	"*Damage bonus vs player (G)"
+	{
+		"Cost"	"200"
+		"CostIncrease"	"100"
+		"Increment"	"0.5"
+		"Limit"	"7500"
 		"Alias"	"dmg_penalty_vs_players"
 		"InitValue"	"1"
 	}
@@ -1637,12 +1680,12 @@
 		"Alias"	"dmg_taken_from_blast_increased"
 		"InitValue"	"1"
 	}
-	"*Blast Resistance  (L)"
+	"*Blast Resistance (L)"
 	{
 		"Cost"	"35"
 		"CostIncrease"	"35"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_blast_reduced"
 		"InitValue"	"1"
 	}
@@ -1651,7 +1694,7 @@
 		"Cost"	"35"
 		"CostIncrease"	"35"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_blast_reduced"
 		"InitValue"	"1"
 	}
@@ -1664,12 +1707,12 @@
 		"Alias"	"dmg_taken_from_bullets_increased"
 		"InitValue"	"1"
 	}
-	"*Bullet Resistance  (L)"
+	"*Bullet Resistance (L)"
 	{
 		"Cost"	"35"
 		"CostIncrease"	"35"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_bullets_reduced"
 		"InitValue"	"1"
 	}
@@ -1678,7 +1721,7 @@
 		"Cost"	"35"
 		"CostIncrease"	"35"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_bullets_reduced"
 		"InitValue"	"1"
 	}
@@ -1691,12 +1734,12 @@
 		"Alias"	"dmg_taken_from_crit_increased"
 		"InitValue"	"1"
 	}
-	"*Crit Resistance  (L)"
+	"*Crit Resistance (L)"
 	{
 		"Cost"	"35"
 		"CostIncrease"	"31"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_crit_reduced"
 		"InitValue"	"1"
 	}
@@ -1705,7 +1748,7 @@
 		"Cost"	"35"
 		"CostIncrease"	"31"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_crit_reduced"
 		"InitValue"	"1"
 	}
@@ -1718,12 +1761,12 @@
 		"Alias"	"dmg_taken_from_fire_increased"
 		"InitValue"	"1"
 	}
-	"*Fire Resistance  (L)"
+	"*Fire Resistance (L)"
 	{
 		"Cost"	"35"
 		"CostIncrease"	"35"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_fire_reduced"
 		"InitValue"	"1"
 	}
@@ -1732,7 +1775,7 @@
 		"Cost"	"35"
 		"CostIncrease"	"35"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_fire_reduced"
 		"InitValue"	"1"
 	}
@@ -2081,6 +2124,15 @@
 		"Alias"	"faster_reload_rate"
 		"InitValue"	"1"
 	}
+	"*Faster Reload Rate (B)"
+	{
+		"Cost"	"30"
+		"CostIncrease"	"10"
+		"Increment"	"-0.1"
+		"Limit"	"0.2"
+		"Alias"	"faster_reload_rate"
+		"InitValue"	"1"
+	}
 	"*Fire Particle Blue"
 	{
 		"Cost"	"10"
@@ -2118,6 +2170,15 @@
 		"Alias"	"fire_rate_bonus"
 		"InitValue"	"1"
 	}
+	"*Fire Rate Bonus (Min)"
+	{
+		"Cost"	"40"
+		"CostIncrease"	"20"
+		"Increment"	"-0.1"
+		"Limit"	"0.21"
+		"Alias"	"fire_rate_bonus"
+		"InitValue"	"1"
+	}
 	"*Fire Rate Bonus (Mel)"
 	{
 		"Cost"	"30"
@@ -2132,7 +2193,7 @@
 		"Cost"	"30"
 		"CostIncrease"	"15"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.5"
 		"Alias"	"fire_rate_bonus"
 		"InitValue"	"1"
 	}
@@ -2308,9 +2369,9 @@
 		"Cost"	"60"
 		"CostIncrease"	"30"
 		"Increment"	"1000"
-		"Limit"	"8000"
+		"Limit"	"4000"
 		"Alias"	"flame_speed"
-		"InitValue"	"2000"
+		"InitValue"	"0"
 	}
 	"*Flame Spread Degree"
 	{
@@ -2460,10 +2521,10 @@
 		"Alias"	"generate_rage_on_damage"
 		"InitValue"	"0"
 	}
-	"*Generate Rage On Heal"
+	"*Shield Level"
 	{
 		"Cost"	"200"
-		"CostIncrease"	"100"
+		"CostIncrease"	"200"
 		"Increment"	"1"
 		"Limit"	"2"
 		"Alias"	"generate_rage_on_heal"
@@ -2722,10 +2783,12 @@
 	}
 	"*Heal Rate Penalty"
 	{
-		"Cost"	"10"
+		"Cost"	"400"
 		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Increment"	"1"
+		"Limit"	"4"
 		"Alias"	"heal_rate_penalty"
+		"InitValue"	"0"
 	}
 	"*Healing Mastery"
 	{
@@ -3437,6 +3500,15 @@
 		"Alias"	"lunchbox_adds_minicrits"
 		"InitValue"	"0"
 	}
+	"*Lunchbox Healing Increased"
+	{
+		"Cost"	"25"
+		"CostIncrease"	"5"
+		"Increment"	"0.5"
+		"Limit"	"20000"
+		"Alias"	"lunchbox_healing_decreased"
+		"InitValue"	"1"
+	}
 	"*Lunchbox Healing Decreased"
 	{
 		"Cost"	"10"
@@ -3480,10 +3552,12 @@
 	}
 	"*Mark For Death"
 	{
-		"Cost"	"10"
+		"Cost"	"200"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
+		"Limit"	"1"
 		"Alias"	"mark_for_death"
+		"InitValue"	"0"
 	}
 	"*Mark For Death On Building Pickup"
 	{
@@ -3830,7 +3904,7 @@
 	}
 	"*Minicrit Vs Burning Player"
 	{
-		"Cost"	"300"
+		"Cost"	"500"
 		"CostIncrease"	"150"
 		"Increment"	"1"
 		"Limit"	"1"
@@ -3848,7 +3922,7 @@
 	}
 	"*Minicrits Become Crits"
 	{
-		"Cost"	"200"
+		"Cost"	"250"
 		"CostIncrease"	"100"
 		"Increment"	"1"
 		"Limit"	"1"
@@ -3899,6 +3973,15 @@
 		"Limit"	"10"
 		"Alias"	"mod_ammo_per_shot"
 		"InitValue"	"1"
+	}
+	"*Mod Ammo Per Shot (C)"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"20"
+		"Increment"	"-1"
+		"Limit"	"1"
+		"Alias"	"mod_ammo_per_shot"
+		"InitValue"	"5"
 	}
 	"*Mod Ammo Per Shot Missed Display Only"
 	{
@@ -3999,17 +4082,21 @@
 	}
 	"*Mod Medic Healed Damage Bonus"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
+		"Cost"	"100"
+		"CostIncrease"	"50"
 		"Increment"	"0.1"
+		"Limit"	"2"
 		"Alias"	"mod_medic_healed_damage_bonus"
+		"InitValue"	"1"
 	}
 	"*Mod Medic Healed Deploy Time Penalty"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
+		"Cost"	"100"
+		"CostIncrease"	"50"
 		"Increment"	"0.1"
+		"Limit"	"2"
 		"Alias"	"mod_medic_healed_deploy_time_penalty"
+		"InitValue"	"1"
 	}
 	"*Mod Medic Killed Marked For Death"
 	{
@@ -4143,9 +4230,9 @@
 		"Alias"	"mod_teleporter_cost"
 		"InitValue"	"1"
 	}
-	"*Mod Use Metal Ammo Type"
+	"*Mod Use Metal as Ammo"
 	{
-		"Cost"	"20"
+		"Cost"	"50"
 		"CostIncrease"	"10"
 		"Increment"	"1"
 		"Limit"	"1"
@@ -4159,9 +4246,18 @@
 		"Increment"	"0.1"
 		"Alias"	"mod_weapon_blocks_healing"
 	}
-	"*Mod Wrench Builds Minisentry"
+	"*Wrench Builds Sentry"
 	{
-		"Cost"	"20"
+		"Cost"	"100"
+		"CostIncrease"	"10"
+		"Increment"	"-1"
+		"Limit"	"0"
+		"Alias"	"mod_wrench_builds_minisentry"
+		"InitValue"	"1"
+	}
+	"*Wrench Builds Minisentry"
+	{
+		"Cost"	"100"
 		"CostIncrease"	"10"
 		"Increment"	"1"
 		"Limit"	"1"
@@ -4208,14 +4304,23 @@
 		"Alias"	"mult_airblast_refire_time"
 		"InitValue"	"1"
 	}
-	"*Mult Charge Turn Control"
+	"*Mult Charge Turn Control (B)"
+	{
+		"Cost"	"60"
+		"CostIncrease"	"10"
+		"Increment"	"0.5"
+		"Limit"	"6"
+		"Alias"	"mult_charge_turn_control"
+		"InitValue"	"4"
+	}
+	"*Mult Charge Turn Control (S)"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"10"
 		"Increment"	"0.5"
 		"Limit"	"6"
 		"Alias"	"mult_charge_turn_control"
-		"InitValue"	"0"
+		"InitValue"	"1"
 	}
 	"*Mult Cloak Meter Consume Rate"
 	{
@@ -4276,6 +4381,24 @@
 		"Increment"	"0.1"
 		"Alias"	"mult_health_fromhealers_penalty_active"
 	}
+	"*Dragon Fire Rate"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"10"
+		"Increment"	"-0.1"
+		"Limit"	"0.3"
+		"Alias"	"mult_item_meter_charge_rate"
+		"InitValue"	"1"
+	}
+	"*Gas Charge Rate"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"10"
+		"Increment"	"-0.1"
+		"Limit"	"0.1"
+		"Alias"	"mult_item_meter_charge_rate"
+		"InitValue"	"1"
+	}
 	"*Mult Item Meter Charge Rate"
 	{
 		"Cost"	"125"
@@ -4287,10 +4410,10 @@
 	}
 	"*Thermal Thruster Increased Recharge Rate"
 	{
-		"Cost"	"125"
-		"CostIncrease"	"93"
+		"Cost"	"50"
+		"CostIncrease"	"10"
 		"Increment"	"-0.1"
-		"Limit"	"0"
+		"Limit"	"0.1"
 		"Alias"	"mult_item_meter_charge_rate"
 		"InitValue"	"1"
 	}
@@ -4530,9 +4653,10 @@
 	{
 		"Cost"	"250"
 		"CostIncrease"	"125"
-		"Increment"	"1"
-		"Limit"	"1"
+		"Increment"	"-1"
+		"Limit"	"0"
 		"Alias"	"overheal_decay_disabled"
+		"InitValue"	"1"
 	}
 	"*Overheal Decay Penalty"
 	{
@@ -4543,10 +4667,12 @@
 	}
 	"*Overheal Expert"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Cost"	"200"
+		"CostIncrease"	"100"
+		"Increment"	"1"
+		"Limit"	"4"
 		"Alias"	"overheal_expert"
+		"InitValue"	"0"
 	}
 	"*Overheal Fill Rate Reduced"
 	{
@@ -4748,16 +4874,18 @@
 		"Cost"	"20"
 		"CostIncrease"	"20"
 		"Increment"	"0.25"
-		"Limit"	"2"
+		"Limit"	"3"
 		"Alias"	"Projectile_speed_increased"
 		"InitValue"	"1"
 	}
 	"*Projectile Speed Increased Hidden"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Cost"	"20"
+		"CostIncrease"	"20"
+		"Increment"	"0.25"
+		"Limit"	"3"
 		"Alias"	"Projectile_speed_increased_HIDDEN"
+		"InitValue"	"1"
 	}
 	"*Projectile Spread Angle Removal"
 	{
@@ -5081,10 +5209,12 @@
 	}
 	"*Reload Time Decreased While Healed"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Cost"	"25"
+		"CostIncrease"	"25"
+		"Increment"	"-0.01"
+		"Limit"	"0.5"
 		"Alias"	"reload_time_decreased_while_healed"
+		"InitValue"	"1"
 	}
 	"*Reload Time Increased"
 	{
@@ -5117,9 +5247,9 @@
 	"*Repair Rate Increased"
 	{
 		"Cost"	"30"
-		"CostIncrease"	"15"
-		"Increment"	"0.2"
-		"Limit"	"10"
+		"CostIncrease"	"5"
+		"Increment"	"0.25"
+		"Limit"	"1000"
 		"Alias"	"Repair_rate_increased"
 		"InitValue"	"1"
 	}
@@ -5460,12 +5590,12 @@
 		"Increment"	"0.1"
 		"Alias"	"SET_BONUS:_custom_taunt_particle_attr"
 	}
-	"*Sentry Damage Resistance"
+	"*Resistance To Sentry Damage"
 	{
 		"Cost"	"25"
 		"CostIncrease"	"25"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.2"
 		"Alias"	"SET_BONUS:_dmg_from_sentry_reduced"
 		"InitValue"	"1"
 	}
@@ -5682,10 +5812,12 @@
 	}
 	"*Slow Enemy On Hit"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Cost"	"50"
+		"CostIncrease"	"80"
+		"Increment"	"1"
+		"Limit"	"5"
 		"Alias"	"slow_enemy_on_hit"
+		"InitValue"	"0"
 	}
 	"*Slow Enemy On Hit Major"
 	{
@@ -5696,19 +5828,21 @@
 		"Alias"	"slow_enemy_on_hit_major"
 		"InitValue"	"0"
 	}
-	"*Sniper Aiming Movespeed Decreased"
+	"*Sniper Aiming Movespeed Increased"
 	{
-		"Cost"	"10"
+		"Cost"	"20"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
+		"Limit"	"2"
 		"Alias"	"sniper_aiming_movespeed_decreased"
+		"InitValue"	"1"
 	}
 	"*Sniper Charge Per Sec"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"5"
 		"Increment"	"0.25"
-		"Limit"	"20"
+		"Limit"	"10"
 		"Alias"	"sniper_charge_per_sec"
 		"InitValue"	"1"
 	}
@@ -5736,7 +5870,7 @@
 	"*Sniper Full Charge Damage Bonus"
 	{
 		"Cost"	"20"
-		"CostIncrease"	"5"
+		"CostIncrease"	"10"
 		"Increment"	"1"
 		"Limit"	"3000"
 		"Alias"	"sniper_full_charge_damage_bonus"
@@ -5924,16 +6058,16 @@
 	}
 	"*Spunup Damage Resistance"
 	{
-		"Cost"	"30"
-		"CostIncrease"	"15"
+		"Cost"	"50"
+		"CostIncrease"	"25"
 		"Increment"	"-0.1"
-		"Limit"	"0.4"
+		"Limit"	"0.5"
 		"Alias"	"spunup_damage_resistance"
 		"InitValue"	"1"
 	}
 	"*Spunup Push Force Immunity"
 	{
-		"Cost"	"100"
+		"Cost"	"200"
 		"CostIncrease"	"50"
 		"Increment"	"1"
 		"Limit"	"1"
@@ -6018,7 +6152,7 @@
 		"Cost"	"25"
 		"CostIncrease"	"18"
 		"Increment"	"-0.1"
-		"Limit"	"0.05"
+		"Limit"	"0.02"
 		"Alias"	"stickybomb_charge_rate"
 		"InitValue"	"1"
 	}
@@ -6145,10 +6279,12 @@
 	}
 	"*Subtract Victim Cloak On Hit"
 	{
-		"Cost"	"10"
+		"Cost"	"50"
 		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Increment"	"0.25"
+		"Limit"	"1"
 		"Alias"	"subtract_victim_cloak_on_hit"
+		"InitValue"	"0"
 	}
 	"*Subtract Victim Medigun Charge On Hit"
 	{
@@ -6278,19 +6414,30 @@
 		"Increment"	"0.1"
 		"Alias"	"tradable_after_date"
 	}
+	"*Richesse a la Francaise"
+	{
+		"Cost"	"1000"
+		"CostIncrease"	"5"
+		"Increment"	"1"
+		"Limit"	"1"
+		"Alias"	"turn_to_gold"
+		"InitValue"	"0"
+	}
 	"*Turn To Gold"
 	{
-		"Cost"	"10"
+		"Cost"	"100"
 		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Increment"	"1"
+		"Limit"	"1"
 		"Alias"	"turn_to_gold"
+		"InitValue"	"0"
 	}
 	"*Uber Duration Bonus"
 	{
 		"Cost"	"40"
 		"CostIncrease"	"22"
 		"Increment"	"1"
-		"Limit"	"40"
+		"Limit"	"4"
 		"Alias"	"uber_duration_bonus"
 		"InitValue"	"0"
 	}
@@ -6425,8 +6572,8 @@
 	}
 	"*Weapon Burn Dmg Increased"
 	{
-		"Cost"	"30"
-		"CostIncrease"	"15"
+		"Cost"	"10"
+		"CostIncrease"	"2"
 		"Increment"	"0.25"
 		"Limit"	"1500"
 		"Alias"	"weapon_burn_dmg_increased"
@@ -6441,8 +6588,8 @@
 	}
 	"*Weapon Burn Time Increased"
 	{
-		"Cost"	"30"
-		"CostIncrease"	"15"
+		"Cost"	"10"
+		"CostIncrease"	"2"
 		"Increment"	"0.25"
 		"Limit"	"1500"
 		"Alias"	"weapon_burn_time_increased"
