Configs used on my own server at the moment.

--- a/config_generator_hyperupgrades/hu_attributes.cfg
+++ b/config_generator_hyperupgrades/hu_attributes.cfg
@@ -18,20 +18,25 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
-				"4"	"*Air Dash Count"
-				"5"	"*Increase Player Capture Value"
-				"6"	"*Cancel Falling Damage"
-				"7"	"*Parachute Attribute"
+				"4"	"*Deploy Time Decreased"
+				"5"	"*Air Dash Count"
+				"6"	"*Increase Player Capture Value"
+				"7"	"*Cancel Falling Damage"
+				"8"	"*Parachute Attribute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -56,19 +61,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -93,19 +103,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -130,19 +145,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -167,19 +187,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -204,19 +229,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -257,19 +287,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -294,19 +329,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -331,19 +371,24 @@
 				"10"	"*Dmg Taken Reduced"
 				"11"	"*Cannot Be Backstabbed"
 				"12"	"*No Death From Headshots"
-				"13"	"*Damage Force Reduction"
-				"14"	"*Airblast Vulnerability Multiplier"
-				"15"	"*Drop Health Pack On Kill"
-				"16"	"*Health From Healers Increased"
+				"13"	"*Health From Healers Increased"
+				"14"	"*Health From Packs Increased"
 			}
 			"Physical Upgrades"
 			{
 				"1"	"*Move Speed Bonus"
 				"2"	"*Increased Jump Height"
 				"3"	"*Increased Air Control"
+				"4"	"*Deploy Time Decreased"
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
+				"8"	"*Drop Health Pack On Kill"
+				"9"	"*Airblast Vulnerability Multiplier"
+				"10"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Damage Force Reduction"
+				"12"	"*Gesture Speed Increase"
+				"13"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -593,7 +638,7 @@
 				"6"	"*Slow Enemy On Hit"
 				"7"	"*Minicrit Vs Burning Player"
 				"8"	"*Reveal Cloaked Victim On Hit"
-				"9"	"*Minicrit Vs Burning Player"
+				"9"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
@@ -637,6 +682,7 @@
 				"6"	"*Slow Enemy On Hit Major"
 				"7"	"*Reveal Cloaked Victim On Hit"
 				"8"	"*Reveal Disguised Victim On Hit"
+				"9"	"*Minicrit Vs Burning Player"
 			}
 			"Specific Upgrades"
 			{
@@ -1158,6 +1204,12 @@
 				"7"	"*Reveal Cloaked Victim On Hit"
 				"8"	"*Reveal Disguised Victim On Hit"
 			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+			}
 		}
 		"tf_weapon_flaregun_revenge"
 		{
@@ -1356,15 +1408,42 @@
 				"1"	"*Heal Rate Bonus"
 				"2"	"*Healing Mastery"
 				"3"	"*Overheal Bonus"
-				"4"	"*Overheal Decay Disabled"
-				"5"	"*Damage bonus vs player (S)"
-				"6"	"*Shield Level"
+				"4"	"*Overheal Mastery"
+				"5"	"*Overheal Decay Disabled"
+				"6"	"*Damage bonus vs player (S)"
+				"7"	"*Shield Level"
+				"8"	"*Medigun Leech Beam"
 			}
 			"Specific Upgrades"
 			{
 				"1"	"*Ubercharge Rate Bonus"
 				"2"	"*Uber Duration Bonus"
 				"3"	"*Preserve Ubercharge"
+			}
+		}
+		"tf_weapon_vaccinator"
+		{
+			"Healing & Damage Upgrades"
+			{
+				"1"	"*Heal Rate Bonus"
+				"2"	"*Healing Mastery"
+				"3"	"*Overheal Bonus"
+				"4"	"*Overheal Decay Disabled"
+				"5"	"*Damage bonus vs player (S)"
+				"6"	"*Shield Level"
+				"7"	"*Medigun Leech Beam"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Ubercharge Rate Bonus"
+				"2"	"*Uber Duration Bonus (V)"
+				"3"	"*Preserve Ubercharge"
+				"4"	"*Medigun Fire Resist Deployed"
+				"5"	"*Medigun Fire Resist Passive"
+				"6"	"*Medigun Blast Resist Deployed"
+				"7"	"*Medigun Blast Resist Passive"
+				"8"	"*Medigun Bullet Resist Deployed"
+				"9"	"*Medigun Bullet Resist Passive"
 			}
 		}
 		"tf_weapon_smg"
@@ -1681,6 +1760,29 @@
 				"7"	"*Mark For Death"
 			}
 		}
+		"tf_weapon_sword"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus (Mel)"
+				"2"	"*Melee Bounds Multiplier"
+				"3"	"*Melee Range Multiplier"
+				"4"	"*Critboost On Kill"
+				"5"	"*Crit From Behind"
+				"6"	"*Speed Buff Ally"
+				"7"	"*Mark For Death"
+			}
+		}
 		"tf_weapon_stickbomb"
 		{
 			"Damage Upgrades"
@@ -1709,13 +1811,10 @@
 			"Damage Upgrades"
 			{
 				"1"	"*Damage Bonus"
-				"2"	"*Heal On Hit For Rapidfire"
-				"3"	"*Heal On Kill"
+				"2"	"*Reveal Disguised Victim On Hit"
 				"4"	"*Slow Enemy On Hit"
 				"5"	"*Bleeding Duration"
-				"6"	"*Damage Causes Airblast"
 				"7"	"*Reveal Cloaked Victim On Hit"
-				"8"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
