--- a/config_generator_hyperupgrades/hu_upgrades.cfg
+++ b/config_generator_hyperupgrades/hu_upgrades.cfg
@@ -100,7 +100,7 @@
 	{
 		"Cost"	"80"
 		"CostIncrease"	"32"
-		"Increment"	"0.01"
+		"Increment"	"0.02"
 		"Limit"	"0.1"
 		"Alias"	"add_uber_charge_on_hit"
 		"InitValue"	"0"
@@ -322,7 +322,7 @@
 	"*Airblast Vulnerability Multiplier"
 	{
 		"Cost"	"10"
-		"CostIncrease"	"5"
+		"CostIncrease"	"10"
 		"Increment"	"-0.1"
 		"Limit"	"0.05"
 		"Alias"	"airblast_vulnerability_multiplier"
@@ -1322,8 +1322,8 @@
 	}
 	"*Damage Bonus"
 	{
-		"Cost"	"16"
-		"CostIncrease"	"1"
+		"Cost"	"20"
+		"CostIncrease"	"10"
 		"Increment"	"0.25"
 		"Limit"	"7500"
 		"Alias"	"damage_bonus"
@@ -1559,8 +1559,8 @@
 	}
 	"*Dmg Falloff Decreased"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"5"
+		"Cost"	"30"
+		"CostIncrease"	"30"
 		"Increment"	"-0.25"
 		"Limit"	"0.05"
 		"Alias"	"dmg_falloff_decreased"
@@ -1575,8 +1575,8 @@
 	}
 	"*Melee Resistance"
 	{
-		"Cost"	"25"
-		"CostIncrease"	"25"
+		"Cost"	"5"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.05"
 		"Alias"	"dmg_from_melee_increased"
@@ -1584,8 +1584,8 @@
 	}
 	"*Melee Resistance (L)"
 	{
-		"Cost"	"25"
-		"CostIncrease"	"25"
+		"Cost"	"5"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.35"
 		"Alias"	"dmg_from_melee_increased"
@@ -1623,8 +1623,8 @@
 	}
 	"*Dmg Penalty Vs Players"
 	{
-		"Cost"	"16"
-		"CostIncrease"	"1"
+		"Cost"	"20"
+		"CostIncrease"	"10"
 		"Increment"	"0.25"
 		"Limit"	"7500"
 		"Alias"	"dmg_penalty_vs_players"
@@ -1632,8 +1632,8 @@
 	}
 	"*Damage bonus vs player (C)"
 	{
-		"Cost"	"10"
-		"CostIncrease"	"1"
+		"Cost"	"15"
+		"CostIncrease"	"8"
 		"Increment"	"0.25"
 		"Limit"	"7500"
 		"Alias"	"dmg_penalty_vs_players"
@@ -1682,8 +1682,8 @@
 	}
 	"*Blast Resistance (L)"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"35"
+		"Cost"	"5"
+		"CostIncrease"	"45"
 		"Increment"	"-0.1"
 		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_blast_reduced"
@@ -1691,8 +1691,8 @@
 	}
 	"*Blast Resistance"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"35"
+		"Cost"	"5"
+		"CostIncrease"	"45"
 		"Increment"	"-0.1"
 		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_blast_reduced"
@@ -1709,8 +1709,8 @@
 	}
 	"*Bullet Resistance (L)"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"35"
+		"Cost"	"5"
+		"CostIncrease"	"45"
 		"Increment"	"-0.1"
 		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_bullets_reduced"
@@ -1718,8 +1718,8 @@
 	}
 	"*Bullet Resistance"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"35"
+		"Cost"	"5"
+		"CostIncrease"	"45"
 		"Increment"	"-0.1"
 		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_bullets_reduced"
@@ -1736,8 +1736,8 @@
 	}
 	"*Crit Resistance (L)"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"31"
+		"Cost"	"5"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_crit_reduced"
@@ -1745,8 +1745,8 @@
 	}
 	"*Crit Resistance"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"31"
+		"Cost"	"5"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_crit_reduced"
@@ -1763,8 +1763,8 @@
 	}
 	"*Fire Resistance (L)"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"35"
+		"Cost"	"5"
+		"CostIncrease"	"45"
 		"Increment"	"-0.1"
 		"Limit"	"0.35"
 		"Alias"	"dmg_taken_from_fire_reduced"
@@ -1772,8 +1772,8 @@
 	}
 	"*Fire Resistance"
 	{
-		"Cost"	"35"
-		"CostIncrease"	"35"
+		"Cost"	"5"
+		"CostIncrease"	"45"
 		"Increment"	"-0.1"
 		"Limit"	"0.05"
 		"Alias"	"dmg_taken_from_fire_reduced"
@@ -1791,7 +1791,7 @@
 	"*Dmg Taken Reduced"
 	{
 		"Cost"	"90"
-		"CostIncrease"	"126"
+		"CostIncrease"	"120"
 		"Increment"	"-0.05"
 		"Limit"	"0.15"
 		"Alias"	"dmg_taken_increased"
@@ -2366,12 +2366,12 @@
 	}
 	"*Flame Speed"
 	{
-		"Cost"	"60"
-		"CostIncrease"	"30"
-		"Increment"	"1000"
-		"Limit"	"4000"
+		"Cost"	"50"
+		"CostIncrease"	"100"
+		"Increment"	"500"
+		"Limit"	"4500"
 		"Alias"	"flame_speed"
-		"InitValue"	"0"
+		"InitValue"	"2500"
 	}
 	"*Flame Spread Degree"
 	{
@@ -2382,12 +2382,12 @@
 	}
 	"*Flame Up Speed"
 	{
-		"Cost"	"60"
-		"CostIncrease"	"30"
-		"Increment"	"1000"
-		"Limit"	"8000"
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"100"
+		"Limit"	"1000"
 		"Alias"	"flame_up_speed"
-		"InitValue"	"2000"
+		"InitValue"	"0"
 	}
 	"*Force Center Wrap"
 	{
@@ -2532,10 +2532,10 @@
 	}
 	"*Gesture Speed Increase"
 	{
-		"Cost"	"7"
-		"CostIncrease"	"3"
-		"Increment"	"1"
-		"Limit"	"5"
+		"Cost"	"25"
+		"CostIncrease"	"25"
+		"Increment"	"0.5"
+		"Limit"	"3"
 		"Alias"	"gesture_speed_increase"
 		"InitValue"	"1"
 	}
@@ -2852,8 +2852,8 @@
 	}
 	"*Health From Packs Increased"
 	{
-		"Cost"	"45"
-		"CostIncrease"	"22"
+		"Cost"	"20"
+		"CostIncrease"	"20"
 		"Increment"	"0.25"
 		"Limit"	"5"
 		"Alias"	"health_from_packs_increased"
@@ -3697,8 +3697,8 @@
 	}
 	"*Medigun Blast Resist Deployed"
 	{
-		"Cost"	"40"
-		"CostIncrease"	"32"
+		"Cost"	"100"
+		"CostIncrease"	"100"
 		"Increment"	"-0.1"
 		"Limit"	"0.15"
 		"Alias"	"medigun_blast_resist_deployed"
@@ -3707,7 +3707,7 @@
 	"*Medigun Blast Resist Passive"
 	{
 		"Cost"	"40"
-		"CostIncrease"	"32"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.4"
 		"Alias"	"medigun_blast_resist_passive"
@@ -3715,8 +3715,8 @@
 	}
 	"*Medigun Bullet Resist Deployed"
 	{
-		"Cost"	"40"
-		"CostIncrease"	"32"
+		"Cost"	"100"
+		"CostIncrease"	"100"
 		"Increment"	"-0.1"
 		"Limit"	"0.15"
 		"Alias"	"medigun_bullet_resist_deployed"
@@ -3725,7 +3725,7 @@
 	"*Medigun Bullet Resist Passive"
 	{
 		"Cost"	"40"
-		"CostIncrease"	"32"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.4"
 		"Alias"	"medigun_bullet_resist_passive"
@@ -3781,8 +3781,8 @@
 	}
 	"*Medigun Fire Resist Deployed"
 	{
-		"Cost"	"40"
-		"CostIncrease"	"32"
+		"Cost"	"100"
+		"CostIncrease"	"100"
 		"Increment"	"-0.1"
 		"Limit"	"0.15"
 		"Alias"	"medigun_fire_resist_deployed"
@@ -3791,11 +3791,20 @@
 	"*Medigun Fire Resist Passive"
 	{
 		"Cost"	"40"
-		"CostIncrease"	"32"
+		"CostIncrease"	"40"
 		"Increment"	"-0.1"
 		"Limit"	"0.4"
 		"Alias"	"medigun_fire_resist_passive"
 		"InitValue"	"0.85"
+	}
+	"*Medigun Leech Beam"
+	{
+		"Cost"	"500"
+		"CostIncrease"	"70"
+		"Increment"	"50"
+		"Limit"	"1000"
+		"Alias"	"CUSTOM_medigun_drains_health"
+		"InitValue"	"0"
 	}
 	"*Melee Attack Rate Bonus"
 	{
@@ -4033,6 +4042,15 @@
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
 		"Alias"	"mod_disguise_consumes_cloak"
+	}
+	"*Oiled Flame (Alt Fire Mod) MAY CRASH THE SERVER"
+	{
+		"Cost"	"200"
+		"CostIncrease"	"100"
+		"Increment"	"1"
+		"Limit"	"1"
+		"Alias"	"CUSTOM_oil_replaces_airblast"
+		"InitValue"	"0"
 	}
 	"*Mod Flamethrower Back Crit"
 	{
@@ -4413,7 +4431,7 @@
 		"Cost"	"50"
 		"CostIncrease"	"10"
 		"Increment"	"-0.1"
-		"Limit"	"0.1"
+		"Limit"	"0.02"
 		"Alias"	"mult_item_meter_charge_rate"
 		"InitValue"	"1"
 	}
@@ -4635,8 +4653,8 @@
 	{
 		"Cost"	"40"
 		"CostIncrease"	"24"
-		"Increment"	"0.2"
-		"Limit"	"800.5"
+		"Increment"	"0.25"
+		"Limit"	"800"
 		"Alias"	"overheal_bonus"
 		"InitValue"	"1"
 	}
@@ -4680,6 +4698,15 @@
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
 		"Alias"	"overheal_fill_rate_reduced"
+	}
+	"*Overheal Mastery"
+	{
+		"Cost"	"200"
+		"CostIncrease"	"100"
+		"Increment"	"0.25"
+		"Limit"	"3"
+		"Alias"	"overheal_penalty"
+		"InitValue"	"1"
 	}
 	"*Overheal Penalty"
 	{
@@ -5815,7 +5842,7 @@
 		"Cost"	"50"
 		"CostIncrease"	"80"
 		"Increment"	"1"
-		"Limit"	"5"
+		"Limit"	"1"
 		"Alias"	"slow_enemy_on_hit"
 		"InitValue"	"0"
 	}
@@ -5823,8 +5850,8 @@
 	{
 		"Cost"	"60"
 		"CostIncrease"	"90"
-		"Increment"	"1"
-		"Limit"	"10"
+		"Increment"	"2"
+		"Limit"	"2"
 		"Alias"	"slow_enemy_on_hit_major"
 		"InitValue"	"0"
 	}
@@ -6435,9 +6462,18 @@
 	"*Uber Duration Bonus"
 	{
 		"Cost"	"40"
-		"CostIncrease"	"22"
+		"CostIncrease"	"40"
 		"Increment"	"1"
-		"Limit"	"4"
+		"Limit"	"6"
+		"Alias"	"uber_duration_bonus"
+		"InitValue"	"0"
+	}
+	"*Uber Duration Bonus (V)"
+	{
+		"Cost"	"40"
+		"CostIncrease"	"40"
+		"Increment"	"1"
+		"Limit"	"3"
 		"Alias"	"uber_duration_bonus"
 		"InitValue"	"0"
 	}
